tests/rosetta/out/Smalltalk/catalan-numbers-2.out
/tmp/catalan-numbers-2.st:12: parse error, expected ']'
