tests/rosetta/out/Smalltalk/catalan-numbers-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| catalanRec t1 t2 t3 t5 main i |
catalanRec := [:n | ((n = 0)) ifTrue: [
1.
] .
t1 := (2 * n).
t2 := (t1 - 1).
t3 := (2 * t2).
t5 := (t3 * (catalanRec value: (n - 1))).
(t5 / ((n + 1))) asInteger. ].
main := [ 1 to: 16 do: [:i |.
Transcript show: ((catalanRec value: i asString)) printString; cr.
].
. ].
main value.
